--- a/css/app.css
+++ b/css/app.css
@@ -146,8 +146,8 @@ h1 {
 
 .modal {
     width: 50%;
-    height: 300px;
-    padding: 50px;
+    height: 400px;
+    padding: 35px;
     display: none;
     margin: auto;
     background-color: rgb(0,0,0);
@@ -158,4 +158,8 @@ h1 {
     font-family: 'Coda', cursive;
     text-align: center;
     vertical-align: middle;
+}
+
+#totalStars li {
+	display: inline-block;
 }
